# chimera-scalper

./: .gitignore  .htaccess  .slugignore  CMakeLists.txt  DEPLOYMENT.md  README.md  abaai.py  authenticated_live_trading.py  build.sh  bybit_auth.py  bybit_quick_balance.py  chimera_scalper_blueprint.md  chimera_scalper_layer.md  chimera_scalper_structure.md  cleaned_chimera_scalper.py  config.py  config_bybit_auth.py  create_all_source_files.sh  deepai.py  enhance_chimera.sh  enhanced_bybit_multi.py  fix_atomic_errors.sh  fix_cmake_cuda.sh  fix_compilation.sh  generate_synthetic_l2.py  identifier.sqlite  index.html  index.php  integrated_demo_system.py  legbybit.py  live_learning.py  live_trading_fixed.py  live_trading_with_ml.py  live_training_with_dash.py  livedash.py  livedashbeat.py  ml_trading_final.py  ml_trading_final_demo.py  ml_trading_plus.py  requirements.txt  (+26 more)
Python-3.11.13/: Makefile  Makefile.pre  config.status  python-config  python-config.py
api/: chimera.js
chimera-dashboard/: dashboard-web.html  dashboard.html  package-lock.json  package.json  server.js  serverbackup.js
data_converter/: bybit_converter.py
include/: book_debug.h  book_utils.h  shared_book.h
models/: best_regime_classifier.pth  chimera_regime_20250831_100213.pth  chimera_regime_20250831_100452.pth  chimera_regime_20250831_101733.pth  regime_classifier_20250904_172746.pth  regime_classifier_20250904_182746.pth  regime_classifier_20250904_192746.pth  regime_classifier_20250904_202746.pth  regime_classifier_20250904_212746.pth  regime_classifier_20250904_222746.pth  (+9 more)
src/: main.cpp  (+1 more)
(+210 files in other folders)
